- Changed: Negative wind direction to positive
- Implemented: Support for the heat pump controller Rego600-Rego637 (Rego6XX)
- Fixed: Dashboard showed all light devices instead of only favorite ones
- Fixed: Sensor Timeout status update in web interface
- Fixed: Rain (PCR800) rate/hour corrected
- Implemented: Add support for Lighting6 (Blyss)
- Implemented: Push Button switch type (sends an ON command, with option to specify Off delay)
- Changed: Better day value calculation for meter devices
- Implemented: Raspberry Pi onboard temperature sensor
- Fixed: Meter value dupplication checked now performed for actual day
- Updated: Charts Library
- Implemented: Option to delete data point from sensor by Shift-Left click on month/year graph point

Version 1.0.412 (April 1th 2013)
- Fixed: Siren icon on dashboard
- Implemented: New layout, dropdown menu, hardware moved to setting dropdown
- Implemented: Chart tooltip now includes weekday
- Fixed: Option to enlarge the short-log (5 minutes)
- Fixed: Dim slider using now values 1 till ... , 1=Off
- Implemented: New Log mechanism (needed later for log viewer)
- Implemented: command line option '-logfile'
- Implemented: Log Window
- Implemented: Minimized log traffic from server to client
- Implemented: Option to set RFXCOM Mode (enable/disable protocols)
- Implemented: Displaying of RFXCOM Firmware
- Fixed: Deleting a device now also deleted the schedules
- Fixed: Loading schedules only for used devices, deleting otherwise
- Fixed: Stopping of Domoticz with Domoticz share could take 30 seconds, should be 1 not
- Fixed: Domoticz startup script, restart, time between stop en start set at 4 seconds
- Implemented: Mobile desktop, shortcuts for actual tab page
- Implemented: Combined LaCrosse TX3 Temp + Humidity sensor as one new device
- Implemented: Ability to change page / bookmark page using # on url
- Fixed: After/Before Sunset/Sunrise when starting the application (could be triggered next day)