@@ -19,12 +19,13 @@ Version 1.0.xxx (April xxth 2013)
 - Fixed: Sensor Timeout status update in web interface
 - Fixed: Rain (PCR800) rate/hour corrected
 - Implemented: Add support for Lighting6 (Blyss)
-- Implemented: Push Button switch type (sends an ON command, with option to specify Off delay)
+- Implemented: Push On Button switch type (sends an ON command, with option to specify Off delay)
 - Changed: Better day value calculation for meter devices
 - Implemented: Raspberry Pi onboard temperature sensor
 - Fixed: Meter value dupplication checked now performed for actual day
 - Updated: Charts Library
 - Implemented: Option to delete data point from sensor by Shift-Left click on month/year graph point
+- Implemented: Push On Button switch type (sends an OFF command)
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
